@@ -16,6 +16,8 @@
                   - added NetBSD/OpenBSD netstat support
                   - fixed netstat parsing if address field missing
                   - fixed showing same iface twice on netstat input
+                  pre2:
+                  - added outfile and daemonize for html output
   12-20-2004 0.4: pre1:
                   - get_iface_stats cleanup
                   - plain and csv output added
